--- a/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
@@ -28,30 +28,30 @@ ETH_Sellasie_cons:0 "An Imperial Constitution was approved"
 ETH_Noble_cons:0 "A Noble Constitution was approved"
 
 ### Ideas ###
-ETH_Debt_idea_1:0 "Crippling Debt"
-ETH_Debt_idea_2:0 "Monumental Debt"
-ETH_Debt_idea_3:0 "Immense Debt"
-ETH_Debt_idea_4:0 "Handled Debt"
-ETH_Debt_idea_5:0 "Manageable Debt"
-ETH_military_Focus:0 "Increased Military Budget"
-ETH_production_focus:0 "Increased Production Budget"
-ETH_construction_focus:0 "Increased Construction Budget"
-ETH_Tribal_Intergration:0 "Tribal Integration"
-ETH_advisors_germany:0 "German Military Advisers"
-ETH_Food:0 "Surplus of Food"
-ETH_Scouts:0 "Ethiopia Scout Association"
-ETH_Slavery_idea:0 "Slavery"
-ETH_Land_Reform_idea:0 "Land Income"
-ETH_Aristocratic_Army:0 "Aristocratic Military"
-ETH_Speech_Freedom:0 "Freedom of Speech"
-ETH_Ethiopian_Welfare:0 "Ethiopian Welfare"
-ETH_Lion_of_Judah_idea:0 "Empire of the Lion"
-ETH_Imperial_Inspiration:0 "Imperial Inspiration"
-ETH_Working_Natives:0 "Working Tribes"
-ETH_Trained_Pilots:0 "Trained Pilots"
-ETH_Anti_Imp:0 "Anti-imperialist Spirit"
-ETH_Ethiopian_Guns_idea:0 "Ethiopian Guns"
-ETH_Levy_Army:0 "Army of Levies"
+ETH_Debt_idea_1:0 "과도한 부채"
+ETH_Debt_idea_2:0 "기념적인 부채"
+ETH_Debt_idea_3:0 "거대한 부채"
+ETH_Debt_idea_4:0 "다뤄지는 부채"
+ETH_Debt_idea_5:0 "관리가능한 부채"
+ETH_military_Focus:0 "군대 예산 증가"
+ETH_production_focus:0 "생산업 예산 증가"
+ETH_construction_focus:0 "건설 예산 증가"
+ETH_Tribal_Intergration:0 "부족의 통합"
+ETH_advisors_germany:0 "독일 군대 사절"
+ETH_Food:0 "식량 과잉"
+ETH_Scouts:0 "에티오피아 스카우트 협회"
+ETH_Slavery_idea:0 "노예제도"
+ETH_Land_Reform_idea:0 "토지 수입"
+ETH_Aristocratic_Army:0 "귀족 사병"
+ETH_Speech_Freedom:0 "연설의 자유"
+ETH_Ethiopian_Welfare:0 "에티오피아 복지"
+ETH_Lion_of_Judah_idea:0 "사자의 제국"
+ETH_Imperial_Inspiration:0 "제국의 영감"
+ETH_Working_Natives:0 "일하는 부족"
+ETH_Trained_Pilots:0 "훈련된 파일럿"
+ETH_Anti_Imp:0 "반 제국주의 정신"
+ETH_Ethiopian_Guns_idea:0 "에티오피아 화기"
+ETH_Levy_Army:0 "과세군"
 
 ETH_Debt_idea_1_desc:0 "Our debt has reached a critical level and is a crippling burden on the shoulders of the state. People have begun to call the independence of Ethiopia into question because of how much our debt has tied us down."
 ETH_Debt_idea_2_desc:0 "Despite our large amount of debt, which is preventing us from undertaking large scale projects, we have managed to lessen the burden it has had on the state."
@@ -80,96 +80,96 @@ ETH_Levy_Army_desc:0 "Ethiopia, unlike the powers of the modern era, does not po
 
 
 ### Focuses ###
-ETH_Nationalised_Railroad:0 "Nationalised Railway"
-ETH_Privatised_Railroad:0 "Privatised Railway"
-ETH_Expand_Railroad:0 "Expand the Railway"
-ETH_Southern_Expansion:0 "Southern Railway Expansion"
-ETH_Expand_Into_Eritrea:0 "Expand the Railway into Eritrea"
-ETH_Impose_Amharic:0 "Impose Amharic onto Eritrea"
-ETH_Tribe_Intergration:0 "Tribal Integration"
-ETH_Officer_Intergration:0 "Officer Integration"
-ETH_Construct_Naval_Base:0 "Asamara Naval Base"
-ETH_Intergration_Of_Eritrea:0 "Integration of Eritrea"
-ETH_Develop_Eritrea:0 "Develop Eritrea"
-ETH_Invest_In_Industry:0 "Invest in Industry"
-ETH_Tribal_Modernisation:0 "Tribal Modernisation"
-ETH_Southern_Industrial_Expansion:0 "Southern Industrial Expansion"
-ETH_Military_Industrial_Expansion:0 "Military Industrial Expansion"
-ETH_German_Investment:0 "German Investment"
-ETH_German_Aid:0 "German Aid"
-ETH_German_Military_Mission:0 "German Military Mission"
-ETH_Debt:0 "Deal with our Debt"
-ETH_Tax_Church:0 "Tax the Church"
-ETH_Tax_Slaveowners:0 "Tax Slave-owners"
-ETH_Tax_Oromo:0 "Tax the Oromo"
-ETH_Tax_Eritrea:0 "Introduce Taxation to Eritrea"
-ETH_Budget:0 "Budget Readjustment"
-ETH_Haile:0 "Selassie's Reforms"
-ETH_Educate_Slaves:0 "Educate the Slaves"
-ETH_Slavery_Question:0 "The Slavery Question"
-ETH_Agriculture_Initative:0 "Agriculture Initiative"
-ETH_Land_Reform:0 "Land Reform"
-ETH_Modernise_Bureaucracy:0 "Modernise the Bureaucracy"
-ETH_Tax_Question:0 "The Question of Taxation"
-ETH_Permanent_Feudal_Borders:0 "Permanent Feudal Borders"
-ETH_Governorship_Question:0 "The Governorship Question"
-ETH_Ethiopia_Scout_Association:0 "Ethiopian Scout Association"
-ETH_Military_Question:0 "The Military Question"
-ETH_Finish_The_Reforms:0 "Finish the Reforms"
-ETH_New_Constitucion:0 "New Constitution"
-ETH_People_Constitucion:0 "The Sewochi's Negus"
-ETH_Freedom_Speech:0 "Freedom of Speech"
-ETH_Freedom_Religion:0 "Freedom of Religion"
-ETH_Enrich_People:0 "Enrich the People"
-ETH_Elections:0 "Hold Elections"
-ETH_Emperor_Constitucion:0 "The Negusa Nagast"
-ETH_Revered_Emperor:0 "Revered Emperor"
-ETH_Control_Church:0 "Control the Church"
-ETH_Royal_Advisors:0 "Royal Advisers"
-ETH_Lion_Of_Judah:0 "Lion of Judah"
-ETH_Noble_Constitucion:0 "The Mekwanint's Negus"
-ETH_Noble_Investment:0 "Noble Investments"
-ETH_Power_Of_Tradition:0 "Power of Tradition"
-ETH_Noble_Armies:0 "Mekwanint Armies"
-ETH_Power_Council:0 "Power to the Council"
-ETH_Military_Reforms:0 "Military Reforms"
-ETH_Hire_Askari_Veterans:0 "Hire Askari Veterans"
-ETH_New_Arms_Production:0 "New Arms Production"
-ETH_Import_Small_Arms:0 "Import Small Arms"
-ETH_Artillery_Effort:0 "Artillery Effort"
-ETH_Buy_Tanks:0 "Buy Tanks"
-ETH_Foreign_Doctrine:0 "Foreign Doctrine"
-ETH_Improve_Firepower:0 "Improve Firepower"
-ETH_Modernise_High_Command:0 "Modernise High Command"
-ETH_Legacy_Of_Adowa:0 "Legacy of Adowa"
-ETH_Ethiopian_Guns:0 "Ethiopian Guns"
-ETH_Special_Equipment:0 "Special Equipment"
-ETH_Anti_Imperialist_Spirit:0 "Anti-imperialist Spirit"
-ETH_Improve_Drilling:0 "Improve Drilling"
-ETH_Trust_Officers:0 "Trust our Officers"
-ETH_Develop_Weapons:0 "Develop Weapons"
-ETH_Proffesional_Army:0 "Professional Army"
-ETH_Doctrine_I:0 "Naval Planning Effort"
-ETH_Submarine_Effort:0 "Submarine Effort"
-ETH_Submarine_Doctrine:0 "Submarine Doctrine"
-ETH_Destroyer:0 "Destroyer Effort"
-ETH_Cruiser:0 "Cruiser Effort"
-ETH_Doctrine_II:0 "Naval Doctrine Reform"
-ETH_Dream_Sky:0 "Control of the Sky"
-ETH_Hire_Experts:0 "Hire Aviation Experts"
-ETH_Advanced_Doctrine:0 "Advanced Doctrine"
-ETH_Train_Pilots:0 "Train our Pilots"
-ETH_Skylions:0 "Skylions"
-ETH_Harer_Airbase:0 "The Harer Airbase"
-ETH_fighter_focus:0 "Fighter Focus"
-ETH_bomber_focus:0 "Bomber Focus"
-ETH_CAS_effort:0 "CAS Effort"
-ETH_Crush_Somalia:0 "Crush Somalia"
-ETH_Pacify_Ogaden:0 "Pacify the Ogaden"
-ETH_Industrial_Modernisation:0 "Industrial Modernisation"
-ETH_Heavy_Industry:0 "Construction of Heavy Industry"
-ETH_Coffee:0 "Modernise Coffee Harvesting"
-ETH_Finish_Modernisation:0 "Complete the Modernisation"
+ETH_Nationalised_Railroad:0 "국유화 된 철도"
+ETH_Privatised_Railroad:0 "민영화 된 철도"
+ETH_Expand_Railroad:0 "철도 확장"
+ETH_Southern_Expansion:0 "남부 철도 확장"
+ETH_Expand_Into_Eritrea:0 "에리트레아로 향하는 철도 확장"
+ETH_Impose_Amharic:0 "에리트레아에 암하라어를 강요"
+ETH_Tribe_Intergration:0 "부족의 통합"
+ETH_Officer_Intergration:0 "장교 통합"
+ETH_Construct_Naval_Base:0 "아사마라 해군 기지"
+ETH_Intergration_Of_Eritrea:0 "에리트레아 통합"
+ETH_Develop_Eritrea:0 "에리트레아 개발"
+ETH_Invest_In_Industry:0 "산업에 투자"
+ETH_Tribal_Modernisation:0 "부족의 현대화"
+ETH_Southern_Industrial_Expansion:0 "남부 산업 확장"
+ETH_Military_Industrial_Expansion:0 "군수 산업 확장"
+ETH_German_Investment:0 "독일의 투자"
+ETH_German_Aid:0 "독일의 원조"
+ETH_German_Military_Mission:0 "독일 군사 사절"
+ETH_Debt:0 "우리의 부채를 협상"
+ETH_Tax_Church:0 "교회에 세금 부여"
+ETH_Tax_Slaveowners:0 "노예주에 세금 부과"
+ETH_Tax_Oromo:0 "오로모족에 세금 부과"
+ETH_Tax_Eritrea:0 "에리트레아에 세금제도를 설명"
+ETH_Budget:0 "예산 재조정"
+ETH_Haile:0 "셀라시에의 개혁"
+ETH_Educate_Slaves:0 "노예들을 교육"
+ETH_Slavery_Question:0 "노예 문제"
+ETH_Agriculture_Initative:0 "농업 개혁"
+ETH_Land_Reform:0 "토지 개혁"
+ETH_Modernise_Bureaucracy:0 "관료체제 현대화"
+ETH_Tax_Question:0 "조세 문제"
+ETH_Permanent_Feudal_Borders:0 "영구적인 봉건제의 울타리"
+ETH_Governorship_Question:0 "통치자 문제"
+ETH_Ethiopia_Scout_Association:0 "에티오피아 스카우트 협회"
+ETH_Military_Question:0 "군대 문제"
+ETH_Finish_The_Reforms:0 "개혁의 끝"
+ETH_New_Constitucion:0 "새로운 헌법"
+ETH_People_Constitucion:0 "사람들의 황제"
+ETH_Freedom_Speech:0 "연설의 자유"
+ETH_Freedom_Religion:0 "종교의 자유"
+ETH_Enrich_People:0 "국민을 부유하게"
+ETH_Elections:0 "선거를 치루다"
+ETH_Emperor_Constitucion:0 "왕중의 왕"
+ETH_Revered_Emperor:0 "존경받는 황제"
+ETH_Control_Church:0 "교회를 통제"
+ETH_Royal_Advisors:0 "국왕의 고문들"
+ETH_Lion_Of_Judah:0 "유다의 사자"
+ETH_Noble_Constitucion:0 "귀족들의 황제"
+ETH_Noble_Investment:0 "귀족들의 투자"
+ETH_Power_Of_Tradition:0 "전통의 힘"
+ETH_Noble_Armies:0 "귀족 사병"
+ETH_Power_Council:0 "의회의 힘"
+ETH_Military_Reforms:0 "군부 개혁"
+ETH_Hire_Askari_Veterans:0 "원주민 베테랑 고용"
+ETH_New_Arms_Production:0 "신식 무기 생산"
+ETH_Import_Small_Arms:0 "소형화기 수입"
+ETH_Artillery_Effort:0 "야포 훈련"
+ETH_Buy_Tanks:0 "전차 구입"
+ETH_Foreign_Doctrine:0 "외국의 교리"
+ETH_Improve_Firepower:0 "화력 우세"
+ETH_Modernise_High_Command:0 "대전략 현대화"
+ETH_Legacy_Of_Adowa:0 "아두와의 유산"
+ETH_Ethiopian_Guns:0 "에티오피아 화기"
+ETH_Special_Equipment:0 "특수 장비"
+ETH_Anti_Imperialist_Spirit:0 "반 제국주의 정신"
+ETH_Improve_Drilling:0 "개선된 훈련"
+ETH_Trust_Officers:0 "우리의 장교들에 대한 믿음"
+ETH_Develop_Weapons:0 "무기 개발"
+ETH_Proffesional_Army:0 "전문적인 군대"
+ETH_Doctrine_I:0 "해군 기획 훈련"
+ETH_Submarine_Effort:0 "잠수함 연구"
+ETH_Submarine_Doctrine:0 "잠수한 교리"
+ETH_Destroyer:0 "구축함 연구"
+ETH_Cruiser:0 "순양함 연구"
+ETH_Doctrine_II:0 "해군 교리 개혁"
+ETH_Dream_Sky:0 "영공 통제"
+ETH_Hire_Experts:0 "항공술 전문가 고용"
+ETH_Advanced_Doctrine:0 "향상된 교리"
+ETH_Train_Pilots:0 "조종사 훈련"
+ETH_Skylions:0 "하늘의 사자"
+ETH_Harer_Airbase:0 "하라르 공군기지"
+ETH_fighter_focus:0 "전투기 집중"
+ETH_bomber_focus:0 "폭격기 집중"
+ETH_CAS_effort:0 "CAS 연구"
+ETH_Crush_Somalia:0 "소말리아 공격"
+ETH_Pacify_Ogaden:0 "오가덴을 평화롭게"
+ETH_Industrial_Modernisation:0 "산업 현대화"
+ETH_Heavy_Industry:0 "중공업 공사"
+ETH_Coffee:0 "현대화된 커피 수확"
+ETH_Finish_Modernisation:0 "현대화 완료"
 
 ETH_Nationalised_Railroad_desc:0 "We’ve now nationalised our railways, ensuring that they are Imperial property. We will take good care of them, ensuring that the transportation of goods and troops flows swiftly and efficiently."
 ETH_Privatised_Railroad_desc:0 "We will allow the German-owned railways to continue operation under German personnel, however we will continually monitor them, ensuring that their quality remains of the highest calibre."
@@ -263,16 +263,16 @@ ETH_Coffee_desc:0 "Due to the chaotic situation in Brazil, a large demand for co
 ETH_Finish_Modernisation_desc:0 "Our industrialisation efforts have come to fruition at last. The future is now within our reach; we just need to grasp it!"
 
 ### Tooltips ###
-ETH_public_rail:0 "The DKAEB is owned by the Ethiopian state"
-ETH_private_rail:0 "The DKAEB is owned by German companies"
-ETH_Haile_Reforms:0 "Haile Sellasie has started his reforms"
-ETH_Constitucion_tt:0 "Ethiopia will have a new constitution depending on the reforms passed"
-ETH_Eritrea_tt:0 "§RIf we do not integrate the dangerous elements in Eritrea, taxing them may end badly!§!\n"
+ETH_public_rail:0 "DKAEB는 에티오피아 주 소유입니다."
+ETH_private_rail:0 "DKAEB는 독일 회사 소유입니다."
+ETH_Haile_Reforms:0 "하일레 셀라시에는 그의 개혁을 시작할 것 입니다."
+ETH_Constitucion_tt:0 "에티오피아는 통과 된 개혁에 따라 새로운 헌법을 가질 것입니다."
+ETH_Eritrea_tt:0 "§R에리트리아에서 위험 요소를 통합하지 않으면 세금이 많이 부과 될 수 있습니다!§!\n"
 
 ### Events ###
-ethiopia.1.t:0 "Ethiopia, an empire at Crossroads"
-ethiopia.1.d:0 "Ethiopia, also known as Abyssinia, was the only African state which had managed to remain independent during the XIXth century’s Scramble for Africa and had successfully defeated an Italian invasion in 1896. This victory kick-started the process of modernisation within the Ethiopian Empire, which had sought to bring the country up to date with European standards in terms of its economy, military and administration. In 1918, under empress Zauditu, the Ethiopian empire entered the Weltkrieg on the side of the Germans, successfully annexing the Italian colonies of Somaliland and Eritrea. One positive sign of Ethiopia's modernisation was the expansion of the DPAEB railway, a railway which was vital in linking Ethiopia and served to help transport goods and troops for the country. In 1930, Empress Zauditu died with no surviving children, which prompted her cousin Ras Tafari Makonnen to ascend the throne as Emperor Haile Selassie. The new monarch announced his intention to undertake a new series of reforms in order to westernise Ethiopia. These initiatives, however, were fiercely opposed by the conservative nobility of the nation, who had been greatly strengthened by the annexation of the Italian colonies and the subsequent expansion of the army. Haile Selassie also faces opposition from the Italian businessmen within in Eritrea, who feel that any disturbance to the status quo will bring an end to their privileges. The imperial government, meanwhile, had suffered another blow in 1935, when a report by the German Ministry of Trade announced the fragile economic situation of the DKAEB, which had put the entire Ethiopian economy at risk - thus definitely proving the inefficiency of Ethiopia rallying to the German sphere. With an economic crisis approaching, Ethiopia may need to decide on whether to continue its current relationship with Germany, seek new trade partners, or pursue her own, independent, foreign policy."
-ethiopia.1.a:0 "We stand strong!"
+ethiopia.1.t:0 "에티오피아는 교차로에 서있다"
+ethiopia.1.d:0 "아비시니아(Abyssinia)라고도 알려진 에티오피아는 19세기 아프리카 독립의 날에 독립을 유지했으며 1896년에 이탈리아 침공을 성공적으로 극복한 유일한 아프리카 국가입니다. 이 승리로 에티오피아 제국 내 근대화 과정이 시작되었습니다. 제국은 경제, 군사 및 행정 측면에서 유럽 표준을 최신으로 유지하려고 노력했습니다.  1918년 황후 Zauditu의 아래서, 에티오피아 제국은 세계대전에서 독일측에 들어가고, 성공적으로 소말리아와 에리트레아의 이탈리아 식민지를 점령했습니다. 에티오피아의 근대화에 대한 한 가지 긍정적인 신호는 에티오피아를 연결하는데 필수적인 철도인 DPAEB 철도의 확장이었으며, 이 철도는 재화와 군대를 수송하는 데 도움이되었습니다. 1930년 Zauditu 황후는 후계없이 사망하여 사촌 Ras Tafari Makonnen이 황제 Haile Selassie로 왕위에 올랐습니다. 새로운 군주는 에티오피아를 서구화하기 위해 새로운 일련의 개혁을 착수하겠다는 의사를 발표했습니다. 그러나 이 자주적행동은 이탈리아 식민지 병합과 그 이후의 군대 확장으로 크게 강화된 국가의 보수적인 귀족들이 맹렬히 반대했습니다. 하일레 셀라시에 (Haile Selassie)는 또한 현상 유지에 대한 어떤 방해도 그들의 특권을 종식시킬 것이라고 생각하는 에리트리아 내에서 이탈리아 기업인들의 반대에 직면 해있습니다. 한편 제국 정부는 독일 무역부의 보고서가 에티오피아 경제 전체를 위험에 빠뜨린 DKAEB의 취약한 경제 상황을 발표했을 때 에티오피아의 비효율이 독일의 영역으로 상승했다는 것을 확실히 증명했습니다. 경제 위기가 다가오면서 에티오피아는 현재 독일과의 관계를 지속 할 것인지, 새로운 무역 상대국을 찾을 것인지, 아니면 자신의 독립적인 외교 정책을 추구 할 것인지 결정할 필요가있습니다.
+ethiopia.1.a:0 "우리는 강하게 서 있습니다!"
 ethiopia.2.t:0 "The DAKEB and its approaching bankruptcy"
 ethiopia.2.d:0 "The Deutsche Kaiserliche Abessinien Eisenbahn (DKAEB) railway was established in the early 20th century, and linked Addis Ababa to Djibouti. After a series of German-backed expansions, it is now used mainly to transport ore from the Congo Basin, in Mittelafrika, to Djibouti. Because of the general economic downturn worldwide, ore is no longer being purchased at the rate it once was, resulting in fewer transports for the DPAEB. The situation has now reached such a level that the railway itself is nearing bankruptcy."
 ethiopia.2.a:0 "Keep it running!"
