--- a/Kaiserreich Korean Translation/localisation/KR_Burma_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Burma_l_english.yml
@@ -26,41 +26,41 @@ BUR_national_populist_party_long:0 "통합단결발전당"
 BUR_rangoon_protest:0 "They could've been behind these protests!"
 
 ### Events ###
-burma.0.t:0 "A War-torn Nation"
-burma.0.d:0 "The 1925 British Revolution unavoidably caused the downfall of its once mighty colonial empire. While India proper soon cemented into three separate nation states, the status of Burma was long unclear - with Bharatiya, Siamese, Chinese, Native Burmese and British loyalist forces all operating in the country, the region was a chaotic patchwork of territories resembling near-warlordism. Although the British loyalists (operating mainly from Mandalay and Rangoon) were soon crushed and the Chinese were soon distracted by their own civil war, the Bharatiyas and Siamese kept troops within the country until 1929 - when, fed up with the unstable situation, German mediation brought an end to the hostilities. The resulting treaty awarded parts of eastern and northern Burma to Siam, and left the rest of the country under a restored Konbaung dynasty. In the years since, Queen Myat Pya Lat has struggled to cement her rule against an increasingly radical and politically demanding populace. All the while, Bharatiya waits for an opportunity to spread the revolution east. When the day comes, will Burma be ready?"
-burma.0.a:0 "We shall pass through this hardship together!"
-burma.1.t:0 "Riots and Protests at Rangoon University"
-burma.1.d:0 "Dissatisfaction with the lack of popular involvement in government has sparked some of the greatest demonstrations seen in our country since independence was achieved in 1926. Stemming from the great and prestigious Rangoon University, radicalised leftist students have occupied several administrative buildings and held rallies denouncing the monarchy and its feudal backers as being corrupt and detrimental to the welfare of the nation. Still, the demonstrators haven't managed to garner the support of the industrial workers and rural farmers, restricting the budding movement to the intelligentsia."
-burma.1.a:0 "Send in the batons and sabres!"
-burma.2.t:0 "Riots and Protests at Rangoon University"
-burma.2.d:0 "In neighbouring Burma, riots are spreading among a political impotent youth. Protesting against the rampant corruption at Rangoon University, lack of reform and the natural autocracy of the decadent Konbaung dynasty. For now the demonstrations have been restricted to Rangoon, but the inactivity of the current regime might spell another outburst in the months to come, especially with workers at the oil fields in Yenangyaung, Chauk, and Minbu rumbling about lousy pay and poor living conditions. Should the two fractions unite we might find ourselves with a friendly government on the other side of the Bay of Bengal."
-burma.2.a:0 "Let us keep a firm eye upon the Burmese!"
-burma.3.t:0 "Strikes at Yenangyaung Oil Fields"
-burma.3.d:0 "Workers at the oil fields around Yenangyaung, Chauk, and Minbu have commenced a crippling strike in protest against rampant corruption and deplorable living conditions. Police units and paramilitary forces have in so far been completely unsuccessful in containing the protesters, who have occupied the oil fields, waving red flags and chanting anti-monarchy songs. Something must be done to placate their demands, lest national support for their cause explodes."
-burma.3.a:0 "Upstarts! The labour movement must be crushed!"
-burma.3.b:0 "Attempt to placate them..."
-burma.4.t:0 "Rangoon Students Arise in Solidarity!"
+burma.0.t:0 "전쟁으로 분단된 국가"
+burma.0.d:0 "1925 영국 혁명은 한때 강력했던 식민 제국이 몰락하게 되는 피할 수 없는 계기가 되었습니다. 인도는 곧 세개의 분리된 국가로 분열되었지만, 버마는 바라티야인, 시암인, 중국인, 원조 버마인 그리고 영국의 귀족세력등의 활동한 결과로 지위가 불문명해졌고, 거의 전선을 방불케 하는 지역이 되었습니다. 만달레이와 랑군을 지배했던 영국의 귀족들은 곧 망명하였거, 중국인들은 그들의 내전에 직면하였지만, 바라티야인과 시암인들은 1929년 까지 군대를 주둔함으로 불안감을 고조시켰지만, 독일의 중재로 적대행동이 중지되었습니다. 이 조약의 결과로 동쪽과 북쪽의 버마를 시암에게 수여하였지만 나머지는 Konbaung 왕조가 직접 지배하게됩니다. 몇 년이 지난 지금 여왕 Myat Pya Lat은 정치적으로 요구하는 대중과 급격해지는 여왕 통치 반대 운동에 고군분투 하였습니다. 이 기간동안 서쪽의 바라티야인은 동쪽으로 혁명을 확대할 기회를 준비하고 있습니다. 날이 되었습니다, 버마는 준비가 되었습니까?”
+burma.0.a:0 "우리는 이러한 힘든 시기를 함께 이겨내야한다!!"
+burma.1.t:0 "랑군 대학으로부터의 폭동과 항쟁"
+burma.1.d:0 "1926년 독립할 당시부터의 대중의 정부 개입의 부족에 대한 불만족은 우리 국가에서 거대한 항쟁의 불꽃이 되었습니다. 위대하고 명망있는 랑군 대학에서 시작하여, 급진적 좌파 성향의 학생은 몇 개의 행정 건물을 장악하였고, 집회를 열어 군주제와 봉건주의 지지자들이 타락하고 구구가 복지에 해롭다고 맹렬히 비난하였습니다. 그러나 이러한 시위는 시골 농부와 산업 노동자의 지지를 얻지 못하였고, 오직 지식인들의 운동으로 제한되었습니다.”
+burma.1.a:0 "바통과 펜싱칼(sabre)을 전달하라" #sabre
+burma.2.t:0 "랑군 대학으로부터의 폭동과 항쟁"
+burma.2.d:0 "이웃한 버마에서는, 젊은층의 정치 참여 부재로 비롯하여 폭동이 시작되었습니다. 부패에 대항한 랑군 대학으로부터 시작한 시위는, 타락한 Konbaung 왕조의 전제국가 시스템과, 개혁의 부족으로부터 비롯했습니다. 현제 시위는 수도 랑군에만 한정되었지만 몇 달 뒤에는 다른 지방에서 호응해 줄 수도 있습니다. 특히 유전지대의 Yenangyaung, Chauk, Minbu의 노동자들이 그들의 적은 급여와 나쁜 생활 수준에 의해 봉기할 수 있습니다. 이러한 두 시위가 통합된다면, 우리는 벵골만 반대편에 있는 친화적인 정부(바라티야 코뮌)와 함께할 수 있습니다."
+burma.2.a:0 "버마인들을 계속 지켜봐라!"
+burma.3.t:0 "Yenangyaung 유전에서의 파업"
+burma.3.d:0 "Yenangyaung, Chauk, and Minbu의 유전에서 일하는 노동자들은 부패한 정부와 그들의 낮은 생활 수준에 반대하며 심각한 파업을 시작했습니다.경찰과 예비군은 유전을 장악하고 붉은 깃발을 흔들며 반-군주제 노래를 부르는 시위자들을 몰아내는데 완전히 실패했습니다. 그들의 요구를 달랠 무언가를 제공하여, 나머지 지역에서의 추가적인 시위 확산을 막아야합니다."
+burma.3.a:0 "건방진녀석!! 노동자들의 움직임은 곧 붕괴될것이다!!"
+burma.3.b:0 "그들을 달래기 위해 시도해보아라..."
+burma.4.t:0 "랑군의 학생들이 결속하였습니다!"
 burma.4.d:0 "Catastrophe! Just like the year before, students from Rangoon University has risen up against the monarchy in critical demonstrations and protests. However, this year the radicalised student leaders, lamenting still rampant corruption and autocracy, have joined cause with the equally disgruntled oil workers in Yenangyaung, Chauk, and Minbu, giving the movement a truly national scope. Short of backing down, and staining the monarchy's honour, only a firm military reaction will solve this hopeless situation!"
-burma.4.a:0 "This is outrageous, deploy the army against these youths!"
-burma.4.b:0 "NOT READY - Enough, appoint U Ottoma to facilitate greater democracy!"
-burma.5.t:0 "The Army is Ordered to Fire Upon Protesters"
+burma.4.a:0 "상상할수 없는일이다, 대학생들에 군대를 보내 진압하라"
+burma.4.b:0 "아직 준비가 안됬다. 민주주의를 살릴 U Ottama를 임명하라"
+burma.5.t:0 "군대는 시위대를 향해 발포할 준비가 되었습니다"
 burma.5.d:0 "After what seems an eternity, it has finally come down to a confrontation between the students protesting at Rangoon University and the Royal Burmese Army. News have reached the local commanding officer that a march of striking oil workers is making its way towards the capital, gathering support from the rural villages along the way. On top of all, orders are ticking in from the general staff for the army to disperse the protesters, as the day winds down it seems that Burma's destiny is at hand."
-burma.5.a:0 "...but joins the revolutionaries and overthrows the monarchy!"
-burma.5.b:0 "...and does so properly!"
-burma.6.t:0 "The Proclamation of the Burmese Republic"
-burma.6.d:0 "The Konbaung dynasty has been driven out by a union of students, workers and the military, ushering in a a time of progress under a socialist democratic government. However, the future of our country is still at hand as some leaders, under the command of U Ottama, within the opposition movement argue for reunion with India, namely the Calcutta government of the Bengal, Assam and Orissa. The National Council will have to make a decision."
-burma.6.a:0 "We will stand with our brothers in Calcutta, independently!"
-burma.6.b:0 "U Ottoma is right, apply for admission into the Indian Union"
-burma.6.c:0 "Isolation served us well in the past, it will do so in the future as well!"
-burma.7.t:0 "The Proclamation of the Burmese Republic"
+burma.5.a:0 "...그러나 시위대 편에 참석하여 군주제에 대항했습니다!!!"
+burma.5.b:0 "...그리고 그들은 그렇게 하였습니다."
+burma.6.t:0 "버마 공화국을 선언하다"
+burma.6.d:0 "기존 왕조는 학생, 노동자, 군사의 연합에 의해 강제로 퇴위되었습니다. 사회 민주주의 정부가 새로운 개혁의 시대를 열것입니다. 허나 우리 사회의 미래는 아직 일부 지도자 손에 있습니다. U Ottama의 지휘 아래, 다시 말해 벵갈, 오리사, 아삼의 캘커타 정부 아래에서의 인도와의 재통합에 대한 논쟁이 야당에서 열리고있다. 국회는 결정을 내릴 시간이 다가온다.. "
+burma.6.a:0 "우리는 캘커타의 동지와 독자적으로 살것이다!!"
+burma.6.b:0 "U Ottoma가 옳다 인도 연방에 가입을 희망한다"
+burma.6.c:0 "고립은 과거에 우리를 지켜주었다, 미래에도 당연히 그럴것이다!"
+burma.7.t:0 "버마 공화국의 선언"
 burma.7.d:0 "In Burma, the corrupt Konbaung dynasty has been toppled by a coalition of protesting workers, students and an army refusing to carry out the order to massacre the latter's peaceful demonstrations. Power now resides with a provisional Burmese government, still infant in its position and beleaguered to the East by a hostile Siam. Intimidated by the prospect of a possible civil war with the Bangkok-based Chakri monarchy intervening on the side of the disenfranchised feudal landowners, this new Burmese constellation has approached us with an offer of alliance, securing themselves against foreign involvement and gaining us a secure border to the East. Calcutta will have to answer swiftly and unequivocally lest this opportunity slip out of our hands."
-burma.7.a:0 "Brothers in arms and socialism, we welcome them!"
-burma.7.b:0 "Burma is nothing but the smelly armpit of the continent!"
-burma.8.t:0 "The Burmese Republic Ascends to the Indian Union"
+burma.7.a:0 "환영하네 군대와 사회주의자 동지들!"
+burma.7.b:0 "버마는 대륙의 냄새나는 겨드랑이에 불과하다"
+burma.8.t:0 "인도 연방에 가입한 버마공화국"
 burma.8.d:0 "In Burma, the corrupt Konbaung dynasty has been toppled by a coalition of protesting workers, students and an army refusing to carry out the order to massacre the latter's peaceful demonstrations. Power now resides with a provisional Burmese government, still infant in its position and beleaguered to the East by a hostile Siam. Within said new government, a fraction led by U Ottoma has taken absolute control and has begun arguing for a reunification of the Burmese state with the naturally legal heir to the British Raj, namely our revolutionary Calcutta. A sizeable part of the Burmese state agrees with the proposition, hoping that united under one red banner we may obtain emancipation - not only for the workers and peasants of the Bengal, Orissa, Assam and Burma - but for all of India's oppressed working men and women. The cabinet will have to make its decision swiftly, lest popular support for this union evaporate."
-burma.8.a:0 "Let us go forward together then, united in our struggle!"
-burma.8.b:0 "We would prefer them to be allies instead"
-burma.8.c:0 "We want nothing to do with their conflicts"
+burma.8.a:0 "우리는 그들과 함께 할것이다, 함께 저항할것이다!"
+burma.8.b:0 "우리는 그들과 동맹이 되는것이 좋을것이다."
+burma.8.c:0 "우리는 그들의 갈등과 아무런 상관이 없다."
 
 burma..t:0 "-"
 burma..d:0 "-"
