--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -320,7 +320,7 @@ rusd.961.b:0 "Invite Vladimir and restore the Romanovs as constitutional monarch
 rusd.961.c:0 "Restore the republic."
 
 rusd.97.t:0 "보리스 스튀르메르가 사망하다"
-rusd.97.d:0 "러시아에서 가장 경험이 많은 정치인 중 한 명인 보리스 스튀르메르가 케렌스키의 암살 소식을 듣고 심장마비로 사망했습니다. 1848년에 태어난 스튀르메르는 크림 전쟁을 기억하는 러시아에서 몇 안 되는 사람들 중 하나였습니다. 그는 러시아의 전통과 연속성의 상징이었습니다."
+rusd.97.d:0 "러시아에서 가장 경험이 많은 정치인 중 한 명인 보리스 스튀르메르가 케렌스키의 암살 소식을 듣고 심장마비로 숨졌습니다. 1848년에 태어난 스튀르메르는 크림 전쟁을 기억하는 러시아에서 몇 안 되는 사람들 중 하나였습니다. 그는 러시아의 전통과 연속성의 상징이었습니다."
 rusd.97.a:0 "죽음을 기억하라."
 
 rusd.98.t:0 "Pyotr Struve dies"
