--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -148,11 +148,11 @@ rusd.36.d:0 "A new labour collective has been formed. Socialist methods of work 
 rusd.37.t:0 "Projected Limits exceeded"
 rusd.37.d:0 "Several mines and factories have exceeded projected limits. The resource surplus is reaching our warehouses."
 
-rusd.38.t:0 "Status of the Orthodox Church"
-rusd.38.d:0 "The Orthodox Church, under the leadership of the vocal Patriarch Kirill, is demanding a clarification of its legal status in the Russian Republic. He wants us to pass a constitutional amendment on the issue of our national religion."
-rusd.38.a:0 "Orthodox Christianity is our state religion."
-rusd.38.b:0 "We are a modern, secular state."
-rusd.38.c:0 "The Orthodox Church must have a role in government!"
+rusd.38.t:0 "정교회의 지위"
+rusd.38.d:0 "강경한 총대주교 키릴이 이끄는 정교회는 러시아 공화국에서 법적 지위에 대한 해명을 요구하고 있습니다. 그는 우리가 국교에 대한 헌법 개정안을 통과시키기를 바라고 있습니다."
+rusd.38.a:0 "정교회가 우리의 국교다."
+rusd.38.b:0 "우리는 현대적인 세속국가이다."
+rusd.38.c:0 "정통 교회는 틀림없이 정부 내에서 역할을 할 것이다!"
 
 rusd.39.t:0 "The Clergy criticises our Government"
 rusd.39.d:0 "A number of priests have voiced their disagreement with our policy of a secular and modern state. Even though this fact has little importance, we must keep in mind that religion plays a huge role in common people's lives."
@@ -366,9 +366,9 @@ rusd.105.t:0 "이반 파블로프가 사망하다"
 rusd.105.d:0 "러시아 생리학자로 널리 알려진 이반 페트로비치 파블로프가 오늘 86세의 나이로 페트로그라드에서 숨졌습니다. 그는 1904년에 소화계에 대한 연구로 노벨 의학상을 받았지만, 대부분 그는 고전적 조건형성 연구로 알려져 있습니다. 러시아 대통령은 슬픔을 표했으며 그의 연구소가 곧 박물관이 될 것이라고 발표했습니다."
 rusd.105.a:0 "Let's hope that classical conditioning works on humans."
 
-rusd.106.t:0 "Maxim Gorky dies"
-rusd.106.d:0 "Russian writer Alexei Maximovich Peshkov, better known under his pen name Maxim Gorky, died today in Moscow at 68. A fellow traveller of the Bolsheviks, he experienced oppression under the Tsarist regime but was quite doubtful during the October Revolution, thus avoiding reprisals after the Civil War. A rabid opponent of Kerensky, he publicly supported Bukharin. As he narrowly followed his son in death many think that his sudden death could be due to the changing political atmosphere in Russia."
-rusd.106.a:0 "I assure you, 68 is old age!"
+rusd.106.t:0 "막심 고리키가 사망하다"
+rusd.106.d:0 "필명 막심 고리키로 더 잘 알려진 러시아 작가 알렉세이 막시모비치 페시코프가 오늘 모스크바에서 68세의 나이로 숨졌습니다. 불셰비키의 동료 여행객인 그는 차르 정권 하에서 탄압을 받았지만 10월 혁명 당시에 행적이 불확실했으므로 내전 후 보복을 피할 수 있었습니다. 케렌스키의 광적인 적수인 그는 공개적으로 부카린을 지지했습니다. 그가 아들의 사망 직후에 죽었기 때문에 많은 사람들은 그의 갑작스런 죽음이 러시아의 정치 분위기 변화 때문일 수 있다고 생각합니다."
+rusd.106.a:0 "내 장담컨대, 68세면 늙은거지!"
 
 rusd.107.t:0 "Vladimir Kokotsov dies"
 rusd.107.d:0 "A pre-revolutionary Prime Minister and perhaps the oldest politician still in active service has passed away. The people mass in Petrograd to participate in his funeral. A conservative newspaper even stated that 'his and Sturmer's deaths mark the end of a glorious era of Russian history'."
@@ -445,11 +445,11 @@ rusd.127.t:0 "Tsar Vladimir's Silver Jubilee"
 rusd.127.d:0 "It has been 25 years since his imperial majesty Vladimir I Romanov became the Tsar and autocrat of Russia. It is time for the entire nation to celebrate this grand jubilee."
 rusd.127.a:0 "God save the the Tsar!"
 
-rusd.128.t:0 "First Women's Division of Death"
-rusd.128.d:0 "Maria Bochkareva, Colonel of the Russian Army and Hero of the Weltkrieg and Russian Civil War have recently requested government to allow formation of the first women division by combining existing women's battalions of death which should later serve as basis for formation of a women's corps. Accepting this proposal will surely boost strength of our army and not to forget significant propaganda value - but conservative elements in our armed forces unwilling to change the status quo have to be taken into consideration as well..."
-rusd.128.a:0 "Allow formation of the First Women's Division of Death"
-rusd.128.b:0 "This is unacceptable"
-RUS_WOMAN_DIVISION_tt:0 "We will create the First Women's Division of Death!"
+rusd.128.t:0 "첫번째 죽음의 여성사단"
+rusd.128.d:0 "세계대전과 러시아 내전의 영웅인 마리아 보치카레바 대령은 최근 기존 여성대대를 합하여 훗날 여성군단 형성의 기반이 될 첫 여성사단의 창설을 허용해 줄 것을 정부에 요청했습니다. 이 제안을 수용하는 것은 우리 군대의 힘을 확실히 증가시키고 중요한 선전 가치를 잊지 않을 것입니다. 하지만 현 상황을 바꾸기를 꺼리는 우리 군대의 보수적 요소들도 또한 고려되어야 합니다..."
+rusd.128.a:0 "첫번째 죽음의 여성사단의 창설을 허락하라."
+rusd.128.b:0 "이건 받아들일 수 없다"
+RUS_WOMAN_DIVISION_tt:0 "우린 첫번째 죽음의 여성사단을 만들 것입니다!"
 
 rusd.129.t:0 "Aleksandr Kolchak dies"
 rusd.129.d:0 "The former Hero of the Russian Civil War turned lapdog of Japan, Aleksandr Kolchak, has died in his sleep. Already nationalists are gathering to celebrate demise of Russia's most hated man of the 20th century."
@@ -492,7 +492,7 @@ rusd.138.t:0 "Savinkov's address to the nation."
 rusd.138.d:0 "Boris Savinkov, the closest associate of Supreme Ruler Kornilov, in his radio address to the Russian people announced his dedication to defending Russia from external and internal enemies, who would try to take control over the country. He promised to deal with corruption inside the state apparatus, conduct land reform, improve labour legislation and provide further recovery of the state. It seems that order has finally returned to the country."
 rusd.138.a:0 "Finally..."
 
-rusd.139.t:0 "Reforming the Senate"
+rusd.139.t:0 "상원 개혁"
 rusd.139.d:0 "The recent political crisis has shown the need for extensive reform of the governmental apparatus. The Senate is a useless talking shop, many officials are corrupt and local authorities conceal the real situation in their regions. All these problems should be solved as soon as possible. Our plan outlines creation of a power vertical, the Senate's powers will be restricted and a special control commission will be organised and integrated in the state apparatus."
 rusd.139.a:0 "The new Senate will represent the new Russia!"
 
