--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -367,7 +367,7 @@ rusd.105.d:0 "러시아 생리학자로 널리 알려진 이반 페트로비치 
 rusd.105.a:0 "Let's hope that classical conditioning works on humans."
 
 rusd.106.t:0 "막심 고리키가 사망하다"
-rusd.106.d:0 "필명 막심 고리키로 더 잘 알려진 러시아 작가 알렉세이 막시모비치 페시코프가 오늘 모스크바에서 68세의 나이로 숨졌습니다. 불셰비키의 동료 여행객인 그는 차르 정권 하에서 탄압을 받았지만 10월 혁명 당시에 행적이 불확실했으므로 내전 후 보복을 피할 수 있었습니다. 케렌스키의 광적인 적수인 그는 공개적으로 부카린을 지지했습니다. 그가 아들의 사망 직후에 죽었기 때문에 많은 사람들은 그의 갑작스런 죽음이 러시아의 정치 분위기 변화 때문일 수 있다고 생각합니다."
+rusd.106.d:0 "필명 막심 고리키로 더 잘 알려진 러시아 작가 알렉세이 막시모비치 페시코프가 오늘 모스크바에서 68세의 나이로 숨졌습니다. 불셰비키의 동료 여행객인 그는 차르 정권 하에서 탄압을 받았지만 10월 혁명 당시에 행적이 불확실했으므로 내전 후 보복을 피할 수 있었습니다. 케렌스키의 광적인 적수인 그는 공개적으로 부하린을 지지했습니다. 그가 아들의 사망 직후에 죽었기 때문에 많은 사람들은 그의 갑작스런 죽음이 러시아의 정치 분위기 변화 때문일 수 있다고 생각합니다."
 rusd.106.a:0 "내 장담컨대, 68세면 늙은거지!"
 
 rusd.107.t:0 "Vladimir Kokotsov dies"
