--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -115,11 +115,11 @@ finno_russian_coalition:0 "핀란드-러시아 연합"
 volga_danubian_alliance:0 "볼가-다누비아 동맹"
 slavic_brothers:0 "슬라브 형제들"
 great_russian_alliance:0 "대러시아 동맹"
-unlock_diplomatic_tooltip:0 "국가중점트리의 외교 정책 부분이 잠금 해제되었습니다"
+unlock_diplomatic_tooltip:0 "국가중점계통에서 외교 부분이 잠금 해제되었습니다"
 
 rusfor.1.t:0 "외교 정책"
-rusfor.1.d:0 "Now, with our reign firmly established, we can begin to consider our stance regarding the rest of the world. Russia should start being more active on the world stage, but we are too weak to interfere in the German or Japanese spheres of influence. The Caucasus, bordering the dying Ottoman Empire, is an easy region to subjugate and has large oil deposits for us to exploit. Central Asia, with its unstable situation between the Alash Orda and Turkestan, seems an even easier target. We should secure these areas before shifting our gaze anywhere else."
-rusfor.1.a:0 "Let's show the world our might!"
+rusfor.1.d:0 "이제, 우리의 통치가 확고해졌으므로, 우리는 세계의 다른 나라들에 대한 우리의 입장을 고려하기 시작할 수 있습니다. 러시아는 세계 무대에서 더 많은 활동을 시작할 수 있지만, 독일과 일본의 영향권에 개입하기는 너무 약합니다. 죽어가는 오스만 제국과 접해 있는 코카서스는 우리가 이용할 수 있는 풍부한 석유 매장량을 갖추고 있습니다. 중앙아시아는 알라쉬 오르다와 투르케스탄 사이에 불안정한 상황으로 인해 더욱 쉬운 표적이 되고 있습니다. 우리는 다른 어느 곳으로든 시선을 옮기기 전에 이 지역들을 보호해야 합니다."
+rusfor.1.a:0 "우리의 힘을 세상에 보여주자!"
 
 rusfor.2.t:0 "The Security of our Eastern Borders"
 rusfor.2.d:0 "Russia has recaptured the positions in the Caucasus their Empire has held before. This, and the recent surge of Arabian nationalism, originating from Egypt and Hashemite Arabia, puts our state and its foreign interest in grave danger. To have any hope to survive the approaching struggles with our hostile Arabian neighbours, we must quickly stabilise our eastern borders. The Sultan plans to send Prince Nihad to propose a non-aggression treaty with Russia."
