--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -2,59 +2,59 @@ l_english:
 
 ### Ideas ###
 language_issue:0 "러시아어 문제"
-language_issue_desc:0 "The centuries-long Russian dominance of Ukraine and suppression of the Ukrainian language has produced a sizeable Russian-speaking minority, or perhaps even majority, in Ukraine. With independence, the Ukrainian language has been reinvigorated, much to the chagrin of numerous Russo-Ukrainians, many of whom resist the Ukrainian government or even desire a return to Russian rule."
-Hetman_army:0 "Hetman's Army"
-Hetman_army_desc:0 "The Hetman of Ukraine, general Pavlo Skoropadsky, supported by Germany, undermined Austrian influence in Ukraine following the 1927 Austrian Ausgleich renegotiations. The political strife between the military, dominated by the Hetman, and the Ukrainian Rada, headed by the king, has left Ukraine's military in such disarray that even personal reconciliation between the Hetman and Rada would seem to be insufficient; the Ukrainian military is in dire need of reform."
+language_issue_desc:0 "수세기 동안 러시아가 우크라이나를 지배하고 우크라이나어를 억압한 덕분에 우크라이나에서 러시아어로 통용되는 소수 민족, 심지어 다수인들이 생겨났습니다. 독립과 더불어, 우크라이나어는 러시아 정부에 저항하거나 심지어 러시아 통치로의 복귀를 원하고있는 수많은 소러시아인들의 억울함에 훨씬 더 활기를 되찾았습니다."
+Hetman_army:0 "헤트만의 군대"
+Hetman_army_desc:0 "1927년 오스트리아의 대타협에 이어, 독일의 지원을 받는 파블로 스코로파드시키 장군은 우크라이나에 대한 오스트리아의 영향력을 약화시켰습니다. 헤트만이 지배하는 군대와 국왕이 이끄는 우크라이나 라다간의 정치적 분쟁은 우크라이나군을 너무나 혼란스럽게 만들었고, 심지어 우크라이나 군대와 라다간의 개인적인 화해도 부족해 보입니다."
 german_military_advisors:0 "독일 군사 고문단"
 german_military_advisors_desc:0 "-"
 UKR_black_monday:0 "검은 월요일"
-UKR_black_monday_desc:0 "Ukraine's dependence on Germany for agricultural exports left the nation acutely vulnerable to disruption following the Black Monday crisis. With a decreased German demand for Ukrainian exports and a marked reduction in German investment, the Ukrainian economy has stagnated."
+UKR_black_monday_desc:0 "우크라이나의 농산물 수출 의존도는 검은 월요일 위기 이후 대혼란에 크게 취약해졌습니다. 우크라이나 수출에 대한 독일의 수요 감소와 독일의 투자 감소로 인해 우크라이나의 경제는 침체되었습니다."
 increase_taxes:0 "세금 인상"
-increase_taxes_desc:0 "To stimulate economic growth, the Ukrainian government has significantly raised taxes to finance the construction of a modern electrical grid. Despite the burden of this taxation, unemployment has been substantially reduced and living conditions of Ukrainians previously without electricity are quickly improving."
-UKR_GER_recovery_aid:0 "Sending Aid to Ukraine"
-UKR_GER_recovery_aid_desc:0 "Germany has granted Ukraine a large loan to finance the construction of new Ukrainian infrastructure."
+increase_taxes_desc:0 "경제 성장을 촉진시키기 위해, 우크라이나 정부는 현대 전기 시설망 건설에 필요한 세금을 대폭 인상했습니다. 이 세금의 부담에도 불구하고 실업률은 상당히 감소했고 이전에 전기없는 우크라이나인들의 생활 환경은 빠르게 개선되고 있습니다."
+UKR_GER_recovery_aid:0 "우크라이나에 대한 원조"
+UKR_GER_recovery_aid_desc:0 "독일은 우크라이나에 새로운 우크라이나 기반시설 건설을 위한 대규모 융자를 승인했습니다."
 UKR_recovery_aid:0 "독일의 원조"
-UKR_recovery_aid_desc:0 "Ukraine's request to Germany for a substantial loan to finance the construction of new electrical infrastructure has been granted. Unemployed Ukrainians now work to electrify even the poorest Ukrainian households."
+UKR_recovery_aid_desc:0 "새로운 전기 기반시설 건설에 필요한 자금을 충당하기 위한 독일에 대한 우크라이나의 요청이 승인되었습니다. 실직 상태의 우크라이나인들은 가난한 우크라이나 가정들에게도 전기를 공급하기 위해 노력하고 있습니다."
 increase_taxes_2:0 "세금 인상"
-increase_taxes_2_desc:0 "With the success of its electrification effort, the Ukrainian government has been emboldened to again raise taxes, now with the intent to modernise outdated factories left-over from its Russian-controlled past."
-UKR_GER_recovery_aid_2:0 "Sending Aid to Ukraine"
-UKR_GER_recovery_aid_2_desc:0 "Germany has granted Ukraine a second development loan, now with the intent to modernise Ukraine's many outdated factories."
+increase_taxes_2_desc:0 "전기화 노력의 성공과 함께, 이제는 러시아가 통제하던 과거의 시대에 뒤떨어진 공장들을 현대화하려는 의도로 세금 인상을 재촉했습니다."
+UKR_GER_recovery_aid_2:0 "우크라이나에 대한 원조"
+UKR_GER_recovery_aid_2_desc:0 "독일은 우크라이나의 많은 낡은 공장들을 현대화하려는 의도로 우크라이나에 2차 개발 자금을 융자했습니다."
 UKR_recovery_aid_2:0 "독일의 원조"
-UKR_recovery_aid_2_desc:0 "Germany has again accepted our request for a loan. Germany money now finances the modernisation of outdated factories left-over from our Russian-controlled past."
-fraud_in_the_administration:0 "Fraud in the Administration"
+UKR_recovery_aid_2_desc:0 "독일은 우리의 융자 요청을 다시 받아들였다. 독일 화폐는 이제 러시아가 통제하던 과거의 낡은 공장들을 현대화하는데 투자되고 있습니다."
+fraud_in_the_administration:0 "행정부의 사기"
 fraud_in_the_administration_desc:0 "-"
-profits_from_kulaks:0 "Profits from the Kulaks"
-profits_from_kulaks_desc:0 "Ukraine has raised taxes on its landowning farmers 'Kulaks' and reinvests the money in the betterment of the nation's most destitute farms and villages. Even the poorest Ukrainians can now live with dignity."
+profits_from_kulaks:0 "쿨라크의 이익"
+profits_from_kulaks_desc:0 "우크라이나는 그들의 땅을 소유한 농부인 '쿨라크'에 세금을 올렸고 그 돈을 국가의 가장 궁핍한 농장과 마을들을 개선하기 위해 재투자했습니다. 심지어 가장 가난했던 우크라이나 사람들도 이제는 품위 있게 살 수 있습니다."
 another_crisis_kulaks:0 "또 다른 위기"
-another_crisis_kulaks_desc:0 "The Ukrainian government's decision to redistribute the land of its wealthy farmers known as 'Kulaks' has had disastrous consequences. Agricultural yields have fallen sharply and the price of food has skyrocketed."
+another_crisis_kulaks_desc:0 "'쿨라크'로 알려진 부유한 농부들의 땅을 재분배하려는 우크라이나 정부의 결정은 비참한 결과를 가져왔습니다. 농업 수율이 급격히 떨어지고 식량 가격이 급등했습니다."
 ukranian_foreign_policy:0 "우크라이나 대외 정책 중점"
 ukranian_foreign_policy_desc:0 "-"
 investing_in_old_factories:0 "구식 공장 투자"
 investing_in_old_factories_desc:0 "-"
 investing_in_new_factories:0 "신식 공장 투자"
 investing_in_new_factories_desc:0 "-"
-fn_oun_reforms:0 "'ViN' and 'OUN' Reforms"
-fn_oun_reforms_desc:0 "New local governments led by officials from the 'Faith and Nation' and 'Organisation of Ukrainian Nationalists' parties have been effective in mitigating some of Ukraine's administrative troubles."
+fn_oun_reforms:0 "'ViN'과 'OUN'의 개혁"
+fn_oun_reforms_desc:0 "'종교와 국가'와 '우크라이나 민족주의자 기구' 정당이 이끄는 새로운 지방 정부들은 우크라이나의 행정 문제를 완화시키는데 효과적이었습니다."
 UKR_language_immersion:0 "언어 집중 계획"
-UKR_language_immersion_desc:0 "Ukraine, led by the 'Organisation of Ukrainian Nationalists', has implemented a new programme of national linguistic education. Villages with large Russian-speaking populations now receive access to government subsidised Ukrainian language educational programs."
+UKR_language_immersion_desc:0 "'우크라이나 민족주의자 기구'가 주도한 우크라이나는 국가 언어 교육의 새로운 프로그램을 시행했습니다. 러시아어를 사용하는 인구가 많은 마을들은 현재 정부 보조금을 받는 우크라이나어 교육 프로그램에 접근할 수 있습니다."
 constructing_donetsk_airport:0 "도네츠크 공항 건설"
 constructing_donetsk_airport_desc:0 "-"
 UKR_New_Army:0 "새로운 우크라이나 육군"
-UKR_New_Army_desc:0 "Hetman Skoropadsky has restructured the Ukrainian military into a much smaller professional force. While capable of maintaining internal security and much less corrupt and expensive to maintain, the new Ukrainian army is far less numerous."
+UKR_New_Army_desc:0 "헤트만, 스코로파드스키는 우크라이나 군대를 훨씬 적은 직업군으로 재편성했습니다. 내부 보안을 유지할 수 있고 부패와 유지 보수 비용은 훨씬 적지만 새로운 우크라이나 군대는 훨씬 적습니다."
 UKR_Peasant_state:0 "농업 국가"
-UKR_Peasant_state_desc:0 "Ukraine has long relied on small peasant-farmers for its agricultural production. The Hetman, Skoropadsky, has implemented new reforms to alleviate the financial burden on and empower, Ukraine's peasantry."
+UKR_Peasant_state_desc:0 "우크라이나는 농업 생산을 위해 농민 농민에 의존해 왔습니다. 헤트만, 스코로파드스키는 우크라이나의 농민에 대한 재정적 부담을 줄이고 권한을 부여하기 위한 새로운 개혁을 시행했습니다."
 UKR_New_Agriculture:0 "유럽의 밥줄"
-UKR_New_Agriculture_desc:0 "With new infrastructure and technological advancement, Ukraine's agricultural output, already substantial, has grown to become one of the largest in Europe. Ukrainian produce permeates throughout Europe, and perhaps no meal is eaten that hadn't at least partially originated in Ukraine; Ukraine has now truly become the breadbasket of Europe."
+UKR_New_Agriculture_desc:0 "새로운 인프라와 기술 발전으로 우크라이나의 농업 생산량은 이미 상당 부분 유럽에서 가장 큰 규모로 성장했습니다. 우크라이나의 농산물은 유럽 전역에 스며들어 있으며 아마 적어도 우크라이나로부터 나오지 않은 음식은 먹지 않았을 것입니다. 우크라이나는 이제 진정으로 유럽의 밥통이 되었습니다."
 UKR_Splendid_Isolation:0 "훌륭한 격리"
-UKR_Splendid_Isolation_desc:0 "Rather than rely on a foreign power for protection, Ukraine has endeavoured to forge its own place in international affairs."
+UKR_Splendid_Isolation_desc:0 "보호를 위해 외국의 권력에 의존하기보다는 우크라이나는 국제 문제에서 자신의 자리를 굳히기 위해 노력해 왔습니다."
 UKR_Ties_Germany:0 "독일과 유대"
-UKR_Ties_Germany_desc:0 "Ukraine has reaffirmed its commitment to Germany and the Reichspakt and endeavours to secure the eastern flank of the great German-led alliance."
+UKR_Ties_Germany_desc:0 "우크라이나는 독일과 제국협정에 대한 약속을 재확인하고 독일 주도의 동맹관계인 동쪽의 측면을 확보하기 위한 노력해 왔습니다."
 UKR_Ties_Russia:0 "러시아와 유대"
-UKR_Ties_Russia_desc:0 "Despite Ukrainian suspicion of Russian expansionist aspirations, Ukraine has abandoned the Reichspakt for its old overlord, Russia."
-UKR_Rada_diss:0 "Supreme Rada is dissolved"
-UKR_Rada_diss_desc:0 "The Hetman, Pavlo Skoropadsky, has persuaded the king to dissolve the Ukrainian Rada. Without opposition from the Rada, Skoropadsky is now able to govern Ukraine as he sees fit."
-UKR_Local_radas:0 "Local Radas control the regions"
-UKR_Local_radas_desc:0 "Ukraine, under the direction of the Hetman, has been federalised. Ukraine's regional cultural and linguistic variation now forms the basis of Ukraine's internal administrative divisions."
+UKR_Ties_Russia_desc:0 "우크라이나는 러시아 팽창주의자들의 열망에 대한 우크라이나의 의심에도 불구하고 옛 대주교인 러시아에 대한 제국협정을 포기했습니다."
+UKR_Rada_diss:0 "최고위 라다의 해체"
+UKR_Rada_diss_desc:0 "헤트만, 파블로 스코로파드스키는 국왕을 설득하여 우크라이나 라다를 해산시켰습니다. 라다의 반대없이 스코로파드스키는 이제 그가 적합하다고 생각하는 우크라이나를 통치할 수 있습니다."
+UKR_Local_radas:0 "지역 라다의 주 통치"
+UKR_Local_radas_desc:0 "헤트만의 지휘 아래 우크라이나가 연방정부로 가입되었습니다. 우크라이나의 지역적 및 문화적, 언어적 변화는 이제 우크라이나의 행정 구역 내부의 토대를 형성합니다."
 
 ### OOB ###
 RUS_annex_UKR:0 "Ukrainian army incorporated"
