--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -867,7 +867,7 @@ russia.182.a:0 "A foolish proposal."
 russia.182.b:0 "Very well, begin the preparations!"
 
 russia.181.t:0 "프롤레타리아 독재정"
-russia.181.d:0 "드디어 부패한 러시아를 인민들의 힘 아래 새로운 공산주의 국가로 바꿀 때가 왔다!"
+russia.181.d:0 "드디어 부패한 러시아를 인민들의 힘 아래 새로운 공산주의 국가로 바꿀 때가 왔습니다!"
 russia.181.a:0 "노동자들이여 일어나라!"
 russia.181.b:0 "노동자들이여 일어나라!"
 
