--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -385,7 +385,7 @@ RUS_radical_socialist_party:0 "인민사회당"
 RUS_syndicalist_party:0 "볼셰비키"
 RUS_social_democrat_party:0 "멘셰비키"
 RUS_social_liberal_party:0 "사회혁명당"
-RUS_market_liberal_party:0 "카데츠"
+RUS_market_liberal_party:0 "입헌민주당"
 RUS_social_conservative_party:0 "러시아 연방"
 RUS_authoritarian_democrat_party:0 "10월당"
 RUS_paternal_autocrat_party:0 "러시아 전 연방"
@@ -694,11 +694,11 @@ RUS_submarine_interior:0 "무적함대"
 RUS_submarine_interior_desc:0 "To fill the sea of invisible fleets have been the dream of Monastyrev ever since the Weltkrieg. Like packs of wolves they can detect enemy formations and via radio communication group up before picking off any stragglers, be they merchant or military vessels."
 
 ### Tooltips ###
-rus_economic_not_wrangel_tooltip:0 "Wrangel hasn't seized power"
-rus_economic_wrangel_tooltip:0 "Wrangel has seized power"
+rus_economic_not_wrangel_tooltip:0 "브란겔이 권력을 장악하지 않음"
+rus_economic_wrangel_tooltip:0 "브란겔이 권력을 장악함"
 rus_secure_turkestan_tooltip:0 "§Y알마아타§!와 §Y아스트라한§!를 소유하거나 괴뢰국이 가지고 있거나 투르케스탄이 소유하고 있음"
 RUS_GER_blocks_caucasus:0 "독일이 캅카스를 막음"
-RUS_end_protect_caucasus_chain:0 "The event chain concerning German protection in the Caucasus is finished"
+RUS_end_protect_caucasus_chain:0 "독일의 캅카스 보호와 관련된 이벤트 체인이 끝남"
 rus_mountain_republic_tooltip:0 "§Y로스토프§!와 §Y예카테리노다르§!를 소유하거나 괴뢰국이 가지고 있음"
 rus_azerbaijan_tooltip:0 "§Y로스토프§!와 §Y그로즈니§!, §Y예카테리노다르§!를 소유하거나 괴뢰국이 가지고 있음"
 rus_georgia_tooltip:0 "§Y로스토프§!와 §Y블라디캅카스§!, §Y예카테리노다르§!를 소유하거나 괴뢰국이 가지고 있음"
@@ -706,7 +706,7 @@ rus_armenia_tooltip:0 "§Y조지아§!를 소유하거나 괴뢰국이 가지고
 rus_armenia_tooltip1:0 "§Y아제르바이잔§!을 소유하거나 괴뢰국이 가지고 있음"
 rus_concession_caucasus_tooltip:0 "다음 중 하나 이상이 참이어야 함: \n§Y그로즈니§!를 소유하거나 통제하지 않음 \n§Y예카테리노다르§!를 소유하거나 통제하지 않음 \n§Y아제르바이잔§!을 소유하거나 통제하지 않음"
 rus_greater_armenia_tooltip:0 "§Y조지아§!와 §Y아르메니아§!를 소유하거나 괴뢰국이 가지고 있음"
-rus_cancel_tooltip:0 "The conditions aren't met"
+rus_cancel_tooltip:0 "조건이 충족되지 않음"
 rus_take_baghdad_tooltip2:0 "§Y후제스탄§!, §Y쿠르디스탄§!, §Y타브리즈§!와 §Y테헤란§!을 소유하거나 괴뢰국이 가지고 있음"
 rus_take_baghdad_tooltip1:0 "§Y반§!, §Y트라브존§!과 §Y에르주룸§!을 소유하거나 괴뢰국이 가지고 있음"
 rus_transamur_tooltip:0 "§Y아바칸§!, §Y치타§!와 §Y울란우데§!를 소유하거나 괴뢰국이 가지고 있음"
@@ -768,48 +768,48 @@ denikin_stays:0 "데니킨이 정부수반으로 남습니다\n"
 wrangel_stays:0 "브란겔이 정부수반으로 남습니다\n"
 
 russia.7.t:0 "총리 지명"
-russia.7.d:0 "The remnants of Russia's nobility emerged from the turmoil of the civil war with much of their wealth intact. Still controlling large portions of the economy, the aristocrats dominated the Senate, the theoretically powerless Upper House. They have now taken advantage of the body's nominal authority to name the President and have selected Grand Duke Dmitri Pavlovich Romanov for the position. It is unclear who is the true instigator."
-russia.7.a:0 "The reactionary landowners, led by Vladimir Purishkevich."
-russia.7.b:0 "The Clericals under Patriarch Kirill."
-russia.7.c:0 "The Kadets and liberals of Pavel Milyukov."
-russia.7.e:0 "Felix Yusupov, the childhood friend of the Grand Duke!"
+russia.7.d:0 "남은 러시아 귀족들은 재산 대부분을 그대로 유지하면서 내전의 혼란에서 벗어났습니다. 여전히 경제의 많은 부분을 통제하고 있는 귀족들은 이론상 힘이 없는 상원을 지배했숩나다. 그들은 이제 대통령을 지명할 수 있는 명목상의 권한을 사용했으며 드미트리 파블로비치 로마노프를 그 자리에 임명했습니다. 누가 진짜 선동자인지는 불분명합니다."
+russia.7.a:0 "블라디미르 푸리시케비치가 이끄는 반동 지주들"
+russia.7.b:0 "총대주교 키릴 하의 성직자들"
+russia.7.c:0 "파벨 밀류코프의 입헌민주당과 자유주의자들"
+russia.7.e:0 "황태자의 어릴 적 친구인 펠릭스 유수포프!"
 
 russia.8.t:0 "총리 지명"
-russia.8.d:0 "사회혁명당-멘셰비키 연정은 1월 위기 때 모든 경쟁자들을 압도했으며, 입헌민주당의 항복 이후 두마에서 흔들리지 않는 다수를 차지했습니다. 사회혁명당의 최고 이념가인 체르노프는 조율을 성공적으로 이루어냈지만 이제는 수상을 임명할 때입니다."
+russia.8.d:0 "사회혁명당-멘셰비키 연정은 1월 위기 때 모든 경쟁자들을 압도했으며, 입헌민주당의 항복 이후 두마에서 흔들리지 않는 다수를 차지했습니다. 사회혁명당의 최고 이념가인 체르노프는 조율을 성공적으로 이루어냈지만 이제는 총리를 임명할 때입니다."
 russia.8.a:0 "멘셰비키인 이라클리 체레텔리와 함께 하라."
 russia.8.b:0 "자유주의인 파벨 밀류코프로 타협하라."
 russia.8.c:0 "지금은 극단적인 시기이고 우리는 볼셰비즘이 필요하다. 니콜라이 부하린!"
 
 russia.9.t:0 "총리 지명"
-russia.9.d:0 "The Duma has been dissolved and martial law declared. Field marshal Pyotr Wrangel is now nominally of control of the country. A Prime Minister should be appointed for the new regime to broaden its basis of support."
-russia.9.a:0 "Keep Kerensky's Prime Minister, Pavel Milyukov."
-russia.9.b:0 "The leader of the Conservatives, Patriarch Kirill."
-russia.9.c:0 "The chief of the reactionary landowners, Vladimir Purishkevich."
-russia.9.e:0 "Russia needs but one ruler!"
+russia.9.d:0 "두마는 해산되었고 계엄령이 내려졌습니다. 명목상으로 표트르 브란겔 원수가 이 나라를 지배하고 있습니다. 총리가 새 정권에 임명되어 지지 기반을 넓혀야 합니다."
+russia.9.a:0 "케렌스키의 총리, 파벨 밀류코프를 유지하라."
+russia.9.b:0 "보수당의 지도자인 총대주교 키릴"
+russia.9.c:0 "반동 지주들의 우두머리인 블라디미르 푸리시케비치."
+russia.9.e:0 "러시아는 오직 한 명의 통치자만을 필요로 한다!"
 
 russia.10.t:0 "The Kornilov Affair"
 russia.10.d:0 "The Supreme Commander-in-Chief of the Russian army and old enemy of President Kerensky, Lavr Georgiyevich Kornilov has finally seized power, using army troops placed in Petrograd. However, he also understands that without an efficient political programme, his control over the country will be lost and the left Social-Revolutionaries will plunge Russia into terror and chaos. The temporary prime-minister, General Lukomsky, a well-known supporter of Kornilov can maintain a similarity of order, but he has awful relations with almost all republican factions in the Senate and Duma. As a result, Kornilov has decided to invite Boris Savinkov, the leader of 'Narodno-Respublikanskaya Partiya Rossii' (People's Republican Party of Russia), into the government and offer him the post of Prime-Minister. Though Savinkov and Kornilov are not on the best of terms, Kornilov hopes that Savinkov will be able to reconstruct the glory of the Russian state."
 russia.10.a:0 "Kornilov shall save holy Russia!"
 
 russia.37.t:0 "코르닐로프-사빈코프 동맹"
-russia.37.d:0 "Boris Savinkov, a former terrorist and socialist turned populist and nationalist and protector of the Russian peasants in the Duma, has played a very important role in Russian politics since the end of the civil war. Between the years 1917-1920 he gained control over the rightist part of the Social-Revolutionary Party and renamed it the 'People's Republican Party of Russia', which under his leadership did its best to fight separatism throughout the country, propose radical laws to improve the position of the peasants and support pro-Russian movements in the German satrapies, carved out of the territories of the former Russian Empire by the treaty of Brest-Litovsk. A talented writer, as well as the leader of the Combat Squads in the different Russian cities and towns, Savinkov is ready to accept the role of a Kornilov supporter and to start rebuilding the Russian society on the basis of his ideology of National Renewal."
-russia.37.a:0 "Invite the Vozhd of the peasants into the government!"
-russia.37.b:0 "Bring in Field marshal Denikin instead!"
-russia.37.c:0 "Lukomsky can defeat the left SRs!"
+russia.37.d:0 "전직 테러리스트이자 사회주이자이며 이제는 민족주의자이자 대중주의자이고 두마에서 러시아 소작농들의 보호자인 보리스 사빈코프는 내전이 끝난 후 러시아 정치에서 매우 중요한 역할을 해왔습니다. 1917년과 1920년 사이에 그는 사회혁명당의 우파를 장악하고 이를 '러시아 인민 공화당'이라 이름붙였는데, 이 당은 그의 지도 아래에서 소작농의 지위를 향상시키기 위해 급진적인 법안을 제안하고, 독일 총독의 관할지에서 친러시아 운동을 지원하고, 브레스트-리토프스크 조약에 따른 전 러시아 제국의 영토를 개척하는 등 분리주의에 대항하기 위해 최선을 다했습니다. 재능있는 작가이자 각기 다른 러시아 도시 및 마을에서 전투 부대의 대표인 사빈코프는 코르닐로프 지지자로서의 역할을 받아들이고 국가 부활에 대한 그의 이념을 바탕으로 러시아 사회를 재건하기 시작할 준비가 되어있습니다."
+russia.37.a:0 "소작농들의 영도자를 정부로 불러들여라!"
+russia.37.b:0 "대신 데니킨 원수를 불러들여라!"
+russia.37.c:0 "루콤스키가 좌익 사회혁명당을 물리칠 수 있을 것이다!"
 
-russia.38.t:0 "Assasination of Maria Spiridonova"
-russia.38.d:0 "During a meeting of the left SRs in Moscow, Maria Spiridonova was assassinated by members of Savinkov's Combat Squads. The liquidation of such a prominent Socialist leader provoked an early and consequently ill-organised rebellion against the government. The rising was easily suppressed by a concert of the police and Combat Squads. Today, General Kornilov published a new law prohibiting the Left SR party and proscribing its leaders. With the flower of its leadership cut down by the scythe of the state, the Social Revolutionaries no longer pose any threat to the Kornilov-Savinkov dyarchy."
+russia.38.t:0 "마리아 스피리도노바의 암살"
+russia.38.d:0 "마리아 스피리도노바가 모스크바에서 좌익 사회혁명당원과 만나던 도중 사빈코프의 전투 분대에게 암살당했습니다. 그런 저명한 사회주의 지도자의 제거의 결과로 정부에 대한 조직적인 반란이 빠르게 일어났습니다. 반란은 경찰과 전투분대의 협력으로 쉽게 진압되었습니다. 오늘, 코르닐로프 장군은 좌익 사회혁명당을 금지하고 당 지도자를 추방하는 새로운 법을 공포했습니다. 국가의 낫이 당 지도력의 꽃을 베어내면서, 사회혁명당은 코르니로프-사빈코프 양두정치에 어떠한 위협도 가하지 않게 되었습니다."
 russia.38.a:0 "Thus unto all enemies of the state!"
 
-russia.39.t:0 "Kornilov's Death"
+russia.39.t:0 "코르닐로프가 사망하다"
 russia.39.d:0 "Lavr Georgiyevich Kornilov, Supreme Commander-in-chief and President of Russia, passed away last night at his dacha outside Petrograd at the age of 68. With Kornilov gone nothing stands in the way of Savinkov merging the posts of prime minister and president and thus becoming unassailable in his leadership over Russia. The merger was approved by a dubious plebiscite where more than 90 percent of the electorate voted 'Da' (Yes). Savinkov now rules a potent and aggravated nation, ready to shed itself of the many humiliations faced since the Weltkrieg and step into the sun once more. The Vozhd commands!"
 russia.39.a:0 "The great helmsman of the Russian nation is no more."
 
-russia.40.t:0 "Directive No. 1"
+russia.40.t:0 "명령 제 1호"
 russia.40.d:0 "With the merger of the offices of president and prime minister, Boris Savinkov continued to solidify his grip over the Russian State by penning Directive No. 1 (also known as the first 'Prikaz Vozhdya'). Amongst other things, the directive dismissed the Duma whilst outlawing all political parties besides Savinkov's own 'Narodno-Respublikanskaya Partiya Rossii'. Furthermore, the directive raised the Combat Squads to the status of a state organisation and a full-blown branch of the government."
 russia.40.a:0 "No shortage of hooks to hang the enemies of the state."
 
-russia.41.t:0 "Kornilov's Death"
+russia.41.t:0 "코르닐로프가 사망하다"
 russia.41.d:0 "Lavr Georgiyevich Kornilov, Supreme Commander-in-chief and President of Russia, passed away last night at his dacha outside Petrograd at the age of 68. Two cliques are poised to seize control after Kornilov's passing. The first, led by Field marshal Denikin, favours continued authoritarian military rule solidified by strong traditionalism. In opposition stands the young officers of Baron Wrangel. By no means a liberal, the Baron, however, knows that Russia must modernise and the societal issues of the state be resolved by a certain amount of governmental pragmatism."
 russia.41.a:0 "Field marshal Denikin succeeds him!"
 russia.41.b:0 "Baron Wrangel rallies the reformist officers!"
@@ -818,17 +818,17 @@ russia.43.t:0 "러시아의 미래"
 russia.43.d:0 "Field marshal Denikin has seized the apparatus of state from his rivals within the military junta! An avowed traditionalist, Denikin is determined to keep the military's influence in its zenith as a bulwark against the dangers of degenerate socialism. However, some sort of political platform would be useful in securing the survival of a proper order in Russia and as such, it has been proposed that the military restore the Romanov dynasty as a national focal point. Or we could also continue with the Stavka-State."
 russia.43.a:0 "선택은 당신의 몫이다."
 
-russia.42.t:0 "독재정"
+russia.42.t:0 "독재국"
 russia.42.d:0 "With our power consolidated and some measure of stability brought to the country, the time has come to determine measures further promote the cause of order. Some are even arguing that we bring the political system back to the certainties of the Tsarist era."
 russia.42.a:0 "선택은 당신의 몫이다."
 
-russia.11.t:0 "Constitutional Monarchy"
+russia.11.t:0 "입헌군주국"
 russia.11.d:0 "After much deliberation and political machinations the time have come to set up a constitutional monarchy headed by the legitimate Tsar!"
-russia.11.a:0 "We should be a liberal constitutional monarchy. Long live the Tsar!"
-russia.11.b:0 "We should be a liberal constitutional monarchy. Long live the Tsar!"
-russia.11.c:0 "A constitutional monarchy is just what we need to protect Russia!"
-russia.11.e:0 "Field marshal Wrangel invites the pretender to lead a constitutional monarchy."
-russia.11.f:0 "Field marshal Wrangel invites the pretender to lead a constitutional monarchy."
+russia.11.a:0 "우리는 진보적인 입헌군주정이 되어야 한다. 차르 만세!"
+russia.11.b:0 "우리는 진보적인 입헌군주정이 되어야 한다. 차르 만세!"
+russia.11.c:0 "입헌군주정이 러시아를 지키기 위해 우리가 필요로 한 것이다!"
+russia.11.e:0 "브란겔 원수가 입헌군주정을 위해 왕위요구자를 초대했다."
+russia.11.f:0 "브란겔 원수가 입헌군주정을 위해 왕위요구자를 초대했다."
 
 russia.12.t:0 "키릴 차르"
 russia.12.d:0 "러시아가 민주주의의 불안정한 장치로 인해 혼돈에 빠진이후 1년이 지났습니다. 합법적인 차르인 키릴 로마노프와 함께 러시아 왕조를 복원할 때입니다!"
@@ -844,20 +844,20 @@ russia.14.t:0 "드미트리 차르"
 russia.14.d:0 "The time has come to finally restore the great Russian Tsardom under the guiding hand of the new Tsar Dmitri Romanov!"
 russia.14.a:0 "드미트리 차르여 영원하라!"
 
-russia.16.t:0 "Aristocratic Republic"
+russia.16.t:0 "귀족공화국"
 russia.16.d:0 "More than a year has passed since Kerensky's death, and Dmitry Romanov has decided to maintain the Russian republic with the support of the aristocracy."
-russia.16.a:0 "For the republic!"
+russia.16.a:0 "공화국을 위하여!"
 
-russia.17.t:0 "Democratic Republic"
+russia.17.t:0 "민주공화국"
 russia.17.d:0 "More than a year has passed since Kerensky's death shook the republic, and his successors have managed to preserve democracy in Russia"
-russia.17.a:0 "For the republic!"
-russia.17.b:0 "For the people's republic!"
+russia.17.a:0 "공화국을 위하여!"
+russia.17.b:0 "인민 공화국을 위하여!"
 
 pres_elections_ari_rep:0 "As Dmitri was elected president in 1936 the next presidential elections will be held in 1940."
 pres_elections_dem_rep:0 "The Senate will stay the head of state until the election of a new president in 1937.\n"
 pres_elections_dem_rep_popular_front:0 "As Bukharin was elected president in 1936 the next presidential elections will be held in 1940."
 
-russia.18.t:0 "Rise of the Vozhd"
+russia.18.t:0 "영도자의 발흥"
 russia.18.d:0 "With the passing of Lavr Kornilov, Boris Savinkov and his radical NRPR supporters have managed to assume control over the entire country. The most important politician in the largest country of the world, Savinkov is hailed as the undisputed Vozhd (leader) of Russia and is ready to enforce his own ideology, which opposes both Syndicalism and the new Russian republican traditions, on the nation. The aim of this ideology, called 'National Renewal' is to reconstruct the Russian state into an entity capable of defending Russian interests and citizens all over the world. Savinkov won't stoop to dependency on either the Reichspakt nor on the defeated Entente - his new Russia will be stronger than any alliance in the world."
 russia.18.a:0 "Russia needs a strong state for a strong people!"
 
@@ -875,7 +875,7 @@ russia.183.t:0 "The Soldier State"
 russia.183.d:0 "The Military led by the Field marshals Wrangel and Denikin has now firmly established its rule on Russia, the legacy of the Whites live on and once again they rise to protect the Motherland from internal and external threats. With them Russia has nothing to fear."
 russia.183.a:0 "Hurrah!"
 
-russia.19.t:0 "Kirill appoints a Prime Minister"
+russia.19.t:0 "키릴이 수상을 임명하다"
 russia.19.d:0 "With the restoration of the Russian Tsardom, it is now time for the new tsar to set out his political agenda and appoint a prime minister."
 russia.19.a:0 "The chief of the reactionary landowners, Vladimir Purishkevich!"
 russia.19.b:0 "The moderate military man, Anton Denikin!"
