--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -755,8 +755,8 @@ russia.6.t:0 "케렌스키 암살의 후폭풍"
 russia.6.d:0 "장기 집권하던 우리의 대통령이었던 알렉산드르 케렌스키의 암살은 나라를 혼란에 빠뜨렸습니다. 대통령이 암살되면서 카데트와 사회 혁명파 연정이 무너졌으며 4개의 세력이 부숴진 국가의 통제권을 장악 할 준비를 하고 있습니다."
 russia.6.a:0 "좌파 사회혁명파-멘셰비키가 두마의 과반석을 갖는다."
 russia.6.b:0 "바론 브란겔이 계엄령을 선포하고 두마를 장악한다."
-russia.6.c:0 "코닐로프의 장교진은 국가 기관을 점령한다!"
-russia.6.e:0 "상원은 대공 드미트리를 새로운 대통령으로 선출한다."
+russia.6.c:0 "코르닐로프의 장교진은 국가 기관을 점령한다!"
+russia.6.e:0 "상원은 드미트리 황태자를 새로운 대통령으로 선출한다."
 
 dmitri_power:0 "§R세습독재주의인 드미트리 로마노프가 공화국의 권력을 갖습니다§!\n"
 wrangel_power:0 "§R권위민주주의인 표토르 브란겔이 공화국의 권력을 갖습니다§!\n"
