--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -857,7 +857,7 @@ pres_elections_ari_rep:0 "As Dmitri was elected president in 1936 the next presi
 pres_elections_dem_rep:0 "The Senate will stay the head of state until the election of a new president in 1937.\n"
 pres_elections_dem_rep_popular_front:0 "As Bukharin was elected president in 1936 the next presidential elections will be held in 1940."
 
-russia.18.t:0 "총토의 발흥"
+russia.18.t:0 "영도자의 발흥"
 russia.18.d:0 "With the passing of Lavr Kornilov, Boris Savinkov and his radical NRPR supporters have managed to assume control over the entire country. The most important politician in the largest country of the world, Savinkov is hailed as the undisputed Vozhd (leader) of Russia and is ready to enforce his own ideology, which opposes both Syndicalism and the new Russian republican traditions, on the nation. The aim of this ideology, called 'National Renewal' is to reconstruct the Russian state into an entity capable of defending Russian interests and citizens all over the world. Savinkov won't stoop to dependency on either the Reichspakt nor on the defeated Entente - his new Russia will be stronger than any alliance in the world."
 russia.18.a:0 "Russia needs a strong state for a strong people!"
 
