--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -111,15 +111,15 @@ aviatik_bosnia:0 "Aviatik Bosnia"
 ganz_danubius_bosnia:0 "Ganz Danubius"
 
 ### Brazil ###
-companhia_siderurgica_nacional:0 "Companhia Siderúrgica Nacional"
-universidade_federal_rio_de_janeiro:0 "Universidade Federal do Rio de Janeiro"
+companhia_siderurgica_nacional:0 "국립 제철 회사"
+universidade_federal_rio_de_janeiro:0 "리오 데 자네이루 연방 대학교"
 ultra_brazil:0 "울트라"
 imbel:0 "IMBEL"
 taurus:0 "타우루스"
-fabrica_nacional_motores:0 "Fábrica Nacional de Motores"
-companhia_aeronautica_paulista:0 "Companhia Aeronáutica Paulista"
-arsenal_marinha_rio_de_janeiro:0 "Arsenal de Marinha do Rio de Janeiro"
-estrada_ferro_central_brasil:0 "Estrada de Ferro Central do Brasil"
+fabrica_nacional_motores:0 "국립 자동차 공장"
+companhia_aeronautica_paulista:0 "상파울루 공군 회사"
+arsenal_marinha_rio_de_janeiro:0 "리오 데 자네이루 해군 조병창"
+estrada_ferro_central_brasil:0 "브라질 중앙 철도"
 
 ### Bulgaria ###
 bdz:0 "BDZ"
