--- a/Kaiserreich Korean Translation/localisation/KR_Siberia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Siberia_l_english.yml
@@ -13,11 +13,11 @@ SIB_social_liberal_party:0 "연방주의자"
 SIB_social_liberal_party_long:0 "연방주의자"
 SIB_market_liberal_party:0 "연방주의자"
 SIB_market_liberal_party_long:0 "연방주의자"
-SIB_social_conservative_party:0 "오블라스트니키"
-SIB_social_conservative_party_long:0 "오블라스트니키 (시베리아 지역주의)"
-SIB_authoritarian_democrat_party:0 "PFP"
+SIB_social_conservative_party:0 "시베리아 지역주의"
+SIB_social_conservative_party_long:0 "시베리아 지역주의"
+SIB_authoritarian_democrat_party:0 "인민자유당"
 SIB_authoritarian_democrat_party_long:0 "인민자유당"
-SIB_paternal_autocrat_party:0 "SVR"
+SIB_paternal_autocrat_party:0 "러시아 보즈로즈데니야 연방"
 SIB_paternal_autocrat_party_long:0 "러시아 보즈로즈데니야 연방"
-SIB_national_populist_party:0 "SVR"
+SIB_national_populist_party:0 "러시아 보즈로즈데니야 연방"
 SIB_national_populist_party_long:0 "러시아 보즈로즈데니야 연방"
