--- a/Kaiserreich Korean Translation/localisation/KR_Governments_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Governments_l_english.yml
@@ -20,7 +20,7 @@ market_liberal_desc:0 "시장자유주의자"
 social_conservative_desc:0 "사회보수주의자"
 authoritarian_democrat_desc:0 "권위민주주의자"
 paternal_autocrat_desc:0 "세습전제주의자"
-national_populist_desc:0 "민족대중주의"
+national_populist_desc:0 "민족대중주의자"
 
 totalist_subtype_desc:0 "전체주의는 단어 그대로의 이념, 또는 비슷한 특성을 가진 다양한 좌파 사상을 동시에 지칭하기도 합니다. 이념으로서 전체주의는 세계 속 사회주의의 새 지향점을 추구합니다. 강해진 노동자와 계급 철폐의 유토피아를 지향하면서도 마르스크주의적 이상을 약화시키거나 버리지 않으며, 이것을 기본 이념으로 삼는 것이 사회주의 국가의 역할임을 강조합니다. 전체주의자들은 정부의 목적이 사회주의 국가 건설이라 믿기에 힘을 확장하고 집권화하려 합니다. 이념적 토대를 다지는데 필수적이라 여기기 때문입니다. 간혹 국가주의자와 군국주의자들의 언어와 정책을 모방하기도 합니다. 이들의 권위주의적 성향 탓에, 다른 권위주의자나 전체주의적 사회주의자들은 뜻 밖에도 “전체주의자”라는 이름을 얻게 되었습니다."
 syndicalist_subtype_desc:0 "무정부적 생디칼리즘은 마르크스주의적 혁명 이념입니다. 집산주의적인 노동 조합으로 구성된 민주적인 연방 국가를 기반으로, 사회주의 경제의 국가를 지향합니다. 노동 조합은 모든 노동자들이 공평하게 소유하게 하며 경제, 정치적 통제는 일터를 벗어나서도 연대하도록 합니다. 중앙 정부로부터 큰 자치권을 부여받길 원합니다. 규모가 큰 노동 조합의 일원 선출은, 강한 힘을 갖추고 중앙 정부의 역할을 하는, 지역적이고 국제적인 조합 회의에서 이루어집니다.."
