--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -189,7 +189,7 @@ rusd.50.d:0 "케렌스키가 암살된 후 이 나라는 여전히 혼란에 빠
 rusd.50.a:0 "두마가 러시아의 자유와 위대함을 보장한다!"
 
 rusd.51.t:0 "브란겔 원수가 국가에 연설하다"
-rusd.51.d:0 "브란겔 원수가 권력을 잡은 지 며칠 수 곤경에 처한 러시아 사람들에게 연설하기 위해 앞으로 나섰습니다. 귀족 태생인 브란겔은 새 로마노프 왕조에 대한 그의 꿈을 버리는 한이 있어도 러시아의 생존을 보장하기 위해 무엇이든 할 것입니다. 널리 알려진 그의 연설에서, 원수는 더 극단적인 우파 단체들과 타협할지라도 필요한 모든 수단을 통해 러시아의 질서와 안정을 유지하겠다는 의도를 밝혔습니다."
+rusd.51.d:0 "브란겔 원수가 권력을 잡은 지 며칠 후, 곤경에 처한 러시아 사람들에게 연설하기 위해 앞으로 나섰습니다. 귀족 태생인 브란겔은 새 로마노프 왕조에 대한 그의 꿈을 버리는 한이 있어도 러시아의 생존을 보장하기 위해 무엇이든 할 것입니다. 널리 알려진 그의 연설에서, 원수는 더 극단적인 우파 단체들과 타협할지라도 필요한 모든 수단을 통해 러시아의 질서와 안정을 유지하겠다는 의도를 밝혔습니다."
 rusd.51.a:0 "검은 남작이 신성한 러시아에 질서를 가져다 줄 것이다!"
 
 rusd.52.t:0 "총대주교의 요구"
